[gd_scene load_steps=41 format=2]

[ext_resource path="res://Assets/Tilemaps/Tileset_01.png" type="Texture" id=1]
[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Test.gd" type="Script" id=3]
[ext_resource path="res://Assets/Character/Character.png" type="Texture" id=4]
[ext_resource path="res://Assets/Character/Character2.png" type="Texture" id=5]
[ext_resource path="res://scenes/Untitled.png" type="Texture" id=6]
[ext_resource path="res://scenes/Tileset_01.png" type="Texture" id=7]
[ext_resource path="res://addons/dialogic/Dialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/BoxArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://default_theme.tres" type="Theme" id=10]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="TileSet" id=1]
3/name = "Tileset_01.png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 96, 48, 48 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 6 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Tileset_01.png 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 48, 48, 288, 144 )
4/tile_mode = 1
4/autotile/bitmask_mode = 1
4/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 4, 0 ), 11534415, Vector2( 4, 1 ), 3277257, Vector2( 5, 0 ), 9961767, Vector2( 5, 1 ), 1704420 ]
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 48, 48 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 6 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Tileset_01.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 48, 48, 288, 192 )
5/tile_mode = 2
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 48, 48 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 19 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 10, 600 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 100, 600 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 64, 64 )

[node name="Level_0" type="Node2D"]
script = ExtResource( 3 )

[node name="UpperWorld" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 48, 48 )
cell_custom_transform = Transform2D( 48, 0, 0, 48, 0, 0 )
format = 1
tile_data = PoolIntArray( -1507328, 5, 131073, -1507327, 5, 131073, -1507326, 5, 131073, -1507325, 5, 131073, -1507324, 5, 131073, -1507323, 5, 131073, -1507322, 5, 131073, -1507321, 5, 131073, -1507320, 5, 131073, -1507319, 5, 131073, -1507318, 5, 131073, -1507317, 5, 131073, -1507316, 5, 131073, -1507315, 5, 131073, -1507314, 5, 131073, -1507313, 5, 131073, -1507312, 5, 131073, -1507311, 5, 131073, -1507310, 5, 131073, -1507309, 5, 131073, -1507308, 5, 131073, -1507307, 5, 131073, -1507306, 5, 131073, -1507305, 5, 131073, -1507304, 5, 131073, -1507303, 5, 131073, -1507302, 5, 131073, -1507301, 5, 131073, -1507300, 5, 131073, -1507299, 5, 131073, -1507298, 5, 131073, -1507297, 5, 131073, -1507296, 5, 131073, -1507295, 5, 131073, -1507294, 5, 131073, -1507293, 5, 131073, -1507292, 5, 131073, -1507291, 5, 131073, -1507290, 5, 131073, -1507289, 5, 131073, -1441792, 5, 65540, -1441791, 5, 196609, -1441790, 5, 196609, -1441789, 5, 196609, -1441788, 5, 196609, -1441787, 5, 196609, -1441786, 5, 196609, -1441785, 5, 196609, -1441784, 5, 196609, -1441783, 5, 196609, -1441782, 5, 196609, -1441781, 5, 196609, -1441780, 5, 196609, -1441779, 5, 196609, -1441778, 5, 196609, -1441777, 5, 196609, -1441776, 5, 196609, -1441775, 5, 196609, -1441774, 5, 196609, -1441773, 5, 196609, -1441772, 5, 196609, -1441771, 5, 196609, -1441770, 5, 196609, -1441769, 5, 196609, -1441768, 5, 196609, -1441767, 5, 65541, -1441766, 5, 131073, -1441765, 5, 131073, -1441764, 5, 131073, -1441763, 5, 131073, -1441762, 5, 131073, -1441761, 5, 131073, -1441760, 5, 131073, -1441759, 5, 131073, -1441758, 5, 131073, -1441757, 5, 131073, -1441756, 5, 131073, -1441755, 5, 131073, -1441754, 5, 131073, -1441753, 5, 131073, -1376256, 5, 131074, -1376231, 5, 131072, -1376230, 3, 0, -1376229, 3, 0, -1376228, 3, 0, -1376227, 5, 131073, -1376226, 5, 131073, -1376225, 5, 131073, -1376224, 5, 131073, -1376223, 5, 131073, -1376222, 5, 131073, -1376221, 5, 131073, -1376220, 5, 131073, -1376219, 5, 131073, -1376218, 5, 131073, -1376217, 5, 131073, -1310720, 5, 131074, -1310695, 5, 196608, -1310694, 5, 196609, -1310693, 5, 65541, -1310692, 3, 0, -1310691, 5, 131073, -1310690, 5, 131073, -1310689, 5, 131073, -1310688, 5, 131073, -1310687, 5, 131073, -1310686, 5, 131073, -1310685, 5, 131073, -1310684, 5, 131073, -1310683, 5, 131073, -1310682, 5, 131073, -1310681, 5, 131073, -1245184, 5, 131074, -1245157, 5, 131072, -1245156, 3, 0, -1245155, 3, 0, -1245154, 3, 0, -1245153, 5, 131073, -1245152, 5, 131073, -1245151, 5, 131073, -1245150, 5, 131073, -1245149, 5, 131073, -1245148, 5, 131073, -1245147, 5, 131073, -1245146, 5, 131073, -1245145, 5, 131073, -1179648, 5, 131074, -1179621, 5, 196608, -1179620, 5, 196609, -1179619, 5, 65541, -1179618, 3, 0, -1179617, 5, 131073, -1179616, 5, 131073, -1179615, 5, 131073, -1179614, 5, 131073, -1179613, 5, 131073, -1179612, 5, 131073, -1179611, 5, 131073, -1179610, 5, 131073, -1179609, 5, 131073, -1114112, 5, 131074, -1114083, 5, 131072, -1114082, 3, 0, -1114081, 3, 0, -1114080, 3, 0, -1114079, 5, 131073, -1114078, 5, 131073, -1114077, 5, 131073, -1114076, 5, 131073, -1114075, 5, 131073, -1114074, 5, 131073, -1114073, 5, 131073, -1048576, 5, 131074, -1048547, 5, 196608, -1048546, 5, 196609, -1048545, 5, 65541, -1048544, 3, 0, -1048543, 5, 131073, -1048542, 5, 131073, -1048541, 5, 131073, -1048540, 5, 131073, -1048539, 5, 131073, -1048538, 5, 131073, -1048537, 5, 131073, -983040, 5, 131074, -983009, 5, 131072, -983008, 3, 0, -983007, 3, 0, -983006, 3, 0, -983005, 5, 131073, -983004, 5, 131073, -983003, 5, 131073, -983002, 5, 131073, -983001, 5, 131073, -917504, 5, 131074, -917473, 5, 196608, -917472, 5, 196609, -917471, 5, 65541, -917470, 3, 0, -917469, 5, 131073, -917468, 5, 131073, -917467, 5, 131073, -917466, 5, 131073, -917465, 5, 131073, -851968, 5, 131074, -851935, 5, 131072, -851934, 3, 0, -851933, 3, 0, -851932, 3, 0, -851931, 5, 131073, -851930, 5, 131073, -851929, 5, 131073, -786432, 5, 131074, -786399, 5, 196608, -786398, 5, 196609, -786397, 5, 65541, -786396, 3, 0, -786395, 5, 131073, -786394, 5, 131073, -786393, 5, 131073, -720896, 5, 131074, -720861, 5, 131072, -720860, 3, 0, -720859, 5, 131073, -720858, 5, 131073, -720857, 5, 131073, -655360, 5, 131074, -655325, 5, 196608, -655324, 5, 196609, -655323, 5, 196609, -655322, 5, 196609, -655321, 5, 196609, -589824, 5, 131074, -524288, 5, 131074, -524252, 5, 0, -524251, 5, 1, -524250, 5, 1, -524249, 5, 2, -458752, 5, 131074, -458716, 5, 65536, -458715, 5, 65537, -458714, 5, 65537, -458713, 5, 65538, -393216, 5, 131074, -393203, 5, 1, -393202, 5, 1, -393180, 5, 131072, -393179, 3, 0, -393178, 3, 0, -393177, 5, 131074, -327680, 5, 131074, -327668, 5, 1, -327667, 5, 65536, -327666, 5, 65538, -327665, 5, 1, -327644, 5, 131072, -327643, 3, 0, -327642, 3, 0, -327641, 5, 131074, -262144, 5, 131074, -262133, 5, 1, -262132, 5, 65536, -262131, 5, 131077, -262130, 5, 131076, -262129, 5, 65538, -262128, 5, 1, -262108, 5, 131072, -262107, 3, 0, -262106, 3, 0, -262105, 5, 131074, -196608, 5, 131074, -196607, 5, 0, -196606, 5, 1, -196605, 5, 1, -196604, 5, 1, -196603, 5, 1, -196602, 5, 1, -196601, 5, 1, -196600, 5, 1, -196599, 5, 1, -196598, 5, 1, -196597, 5, 65536, -196596, 5, 131077, -196595, 5, 131073, -196594, 5, 131073, -196593, 5, 131076, -196592, 5, 65538, -196591, 5, 2, -196590, 5, 1, -196589, 5, 1, -196588, 5, 1, -196587, 5, 1, -196586, 5, 1, -196585, 5, 1, -196584, 5, 1, -196583, 5, 1, -196582, 5, 1, -196581, 5, 1, -196580, 5, 1, -196579, 5, 1, -196578, 5, 1, -196577, 5, 1, -196576, 5, 1, -196575, 5, 1, -196574, 5, 1, -196573, 5, 1, -196572, 5, 131072, -196571, 5, 131073, -196570, 3, 0, -196569, 5, 131074, -131072, 5, 131076, -131071, 5, 65537, -131070, 5, 65537, -131069, 5, 65537, -131068, 5, 65537, -131067, 5, 65537, -131066, 5, 65537, -131065, 5, 65537, -131064, 5, 65537, -131063, 5, 65537, -131062, 5, 65537, -131061, 5, 131077, -131060, 5, 131073, -131059, 5, 131073, -131058, 5, 131073, -131057, 5, 131073, -131056, 5, 131076, -131055, 5, 65537, -131054, 5, 65537, -131053, 5, 65537, -131052, 5, 65537, -131051, 5, 65537, -131050, 5, 65537, -131049, 5, 65537, -131048, 5, 65537, -131047, 5, 65537, -131046, 5, 65537, -131045, 5, 65537, -131044, 5, 65537, -131043, 5, 65537, -131042, 5, 65537, -131041, 5, 65537, -131040, 5, 65537, -131039, 5, 65537, -131038, 5, 65537, -131037, 5, 65537, -131036, 5, 131077, -131035, 5, 131073, -131034, 5, 131073, -131033, 5, 131074, -65536, 5, 131073, -65535, 5, 131073, -65534, 5, 131073, -65533, 5, 131073, -65532, 5, 131073, -65531, 5, 131073, -65530, 5, 131073, -65529, 5, 131073, -65528, 5, 131073, -65527, 5, 131073, -65526, 5, 131073, -65525, 5, 131073, -65524, 5, 131073, -65523, 5, 131073, -65522, 5, 131073, -65521, 5, 131073, -65520, 5, 131073, -65519, 5, 131073, -65518, 5, 131073, -65517, 5, 131073, -65516, 5, 131073, -65515, 5, 131073, -65514, 5, 131073, -65513, 5, 131073, -65512, 5, 131073, -65511, 5, 131073, -65510, 5, 131073, -65509, 5, 131073, -65508, 5, 131073, -65507, 5, 131073, -65506, 5, 131073, -65505, 5, 131073, -65504, 5, 131073, -65503, 5, 131073, -65502, 5, 131073, -65501, 5, 131073, -65500, 5, 131073, -65499, 5, 131073, -65498, 5, 131073, -65497, 5, 131074, 0, 5, 131073, 1, 5, 131073, 2, 5, 131073, 3, 5, 131073, 4, 5, 131073, 5, 5, 131073, 6, 5, 131073, 7, 5, 131073, 8, 5, 131073, 9, 5, 131073, 10, 5, 131073, 11, 5, 131073, 12, 5, 131073, 13, 5, 131073, 14, 3, 0, 15, 5, 131073, 16, 5, 131073, 17, 5, 131073, 18, 5, 131073, 19, 5, 131073, 20, 5, 131073, 21, 5, 131073, 22, 5, 131073, 23, 5, 131073, 24, 5, 131073, 25, 5, 131073, 26, 5, 131073, 27, 5, 131073, 28, 5, 131073, 29, 5, 131073, 30, 5, 131073, 31, 5, 131073, 32, 5, 131073, 33, 5, 131073, 34, 5, 131073, 35, 5, 131073, 36, 5, 131073, 37, 5, 131073, 38, 5, 131073, 39, 5, 131074, 65536, 5, 65540, 65537, 5, 196609, 65538, 5, 196609, 65539, 5, 196609, 65540, 5, 196609, 65541, 5, 196609, 65542, 5, 196609, 65543, 5, 196609, 65544, 5, 196609, 65545, 5, 196609, 65546, 5, 196609, 65547, 5, 65541, 65548, 5, 131073, 65549, 5, 131073, 65550, 5, 131073, 65551, 5, 131073, 65552, 5, 65540, 65553, 5, 196609, 65554, 5, 196609, 65555, 5, 196609, 65556, 5, 196609, 65557, 5, 196609, 65558, 5, 196609, 65559, 5, 196609, 65560, 5, 196609, 65561, 5, 196609, 65562, 5, 196609, 65563, 5, 196609, 65564, 5, 196609, 65565, 5, 196609, 65566, 5, 196609, 65567, 5, 196609, 65568, 5, 196609, 65569, 5, 196609, 65570, 5, 196609, 65571, 5, 196609, 65572, 5, 65541, 65573, 3, 0, 65574, 3, 0, 65575, 5, 131074, 131072, 5, 131074, 131083, 5, 196608, 131084, 5, 65541, 131085, 5, 131073, 131086, 5, 131073, 131087, 5, 65540, 131088, 5, 196610, 131108, 5, 131072, 131109, 3, 0, 131110, 3, 0, 131111, 5, 131074, 196608, 5, 131074, 196620, 5, 196608, 196621, 5, 65541, 196622, 5, 65540, 196623, 5, 196610, 196644, 5, 131072, 196645, 3, 0, 196646, 3, 0, 196647, 5, 131074, 262144, 5, 131074, 262157, 5, 196608, 262158, 5, 196610, 262180, 5, 131072, 262181, 5, 131073, 262182, 3, 0, 262183, 5, 131074, 327680, 5, 131074, 327716, 5, 131072, 327717, 5, 131073, 327718, 5, 131073, 327719, 5, 131074, 393216, 5, 131074, 393252, 5, 196608, 393253, 5, 196609, 393254, 5, 196609, 393255, 5, 196610, 458752, 5, 131074, 524288, 5, 131074, 524323, 5, 0, 524324, 5, 2, 524325, 5, 0, 524326, 5, 1, 524327, 5, 2, 589824, 5, 131074, 589859, 5, 65536, 589860, 5, 65537, 589861, 5, 65537, 589862, 5, 65537, 589863, 5, 65538, 655360, 5, 131074, 655393, 5, 0, 655394, 5, 2, 655395, 5, 131072, 655396, 3, 0, 655397, 5, 131073, 655398, 5, 131073, 655399, 5, 131073, 720896, 5, 131074, 720929, 5, 65536, 720930, 5, 65537, 720931, 5, 131077, 720932, 5, 131073, 720933, 5, 131073, 720934, 5, 131073, 720935, 5, 131073, 786432, 5, 131074, 786463, 5, 0, 786464, 5, 2, 786465, 5, 131072, 786466, 3, 0, 786467, 5, 131073, 786468, 5, 131073, 786469, 5, 131073, 786470, 5, 131073, 786471, 5, 131073, 851968, 5, 131074, 851999, 5, 65536, 852000, 5, 65537, 852001, 5, 131077, 852002, 5, 131073, 852003, 5, 131073, 852004, 5, 131073, 852005, 5, 131073, 852006, 5, 131073, 852007, 5, 131073, 917504, 5, 131074, 917533, 5, 0, 917534, 5, 2, 917535, 5, 131072, 917536, 3, 0, 917537, 3, 0, 917538, 5, 131073, 917539, 5, 131073, 917540, 5, 131073, 917541, 5, 131073, 917542, 5, 131073, 917543, 5, 131073, 983040, 5, 131074, 983069, 5, 65536, 983070, 5, 65537, 983071, 5, 131077, 983072, 5, 131073, 983073, 5, 131073, 983074, 5, 131073, 983075, 5, 131073, 983076, 5, 131073, 983077, 5, 131073, 983078, 5, 131073, 983079, 5, 131073, 1048576, 5, 131074, 1048603, 5, 0, 1048604, 5, 2, 1048605, 5, 131072, 1048606, 3, 0, 1048607, 3, 0, 1048608, 5, 131073, 1048609, 5, 131073, 1048610, 5, 131073, 1048611, 5, 131073, 1048612, 5, 131073, 1048613, 5, 131073, 1048614, 5, 131073, 1048615, 5, 131073, 1114112, 5, 131074, 1114139, 5, 65536, 1114140, 5, 65537, 1114141, 5, 131077, 1114142, 3, 0, 1114143, 3, 0, 1114144, 5, 131073, 1114145, 5, 131073, 1114146, 5, 131073, 1114147, 5, 131073, 1114148, 5, 131073, 1114149, 5, 131073, 1114150, 5, 131073, 1114151, 5, 131073, 1179648, 5, 131074, 1179673, 5, 0, 1179674, 5, 2, 1179675, 5, 131072, 1179676, 3, 0, 1179677, 5, 131073, 1179678, 5, 131073, 1179679, 5, 131073, 1179680, 5, 131073, 1179681, 5, 131073, 1179682, 5, 131073, 1179683, 5, 131073, 1179684, 5, 131073, 1179685, 5, 131073, 1179686, 5, 131073, 1179687, 5, 131073, 1245184, 5, 131074, 1245209, 5, 65536, 1245210, 5, 65537, 1245211, 5, 131077, 1245212, 5, 131073, 1245213, 5, 131073, 1245214, 5, 131073, 1245215, 5, 131073, 1245216, 5, 131073, 1245217, 5, 131073, 1245218, 5, 131073, 1245219, 5, 131073, 1245220, 5, 131073, 1245221, 5, 131073, 1245222, 5, 131073, 1245223, 5, 131073, 1310720, 5, 131074, 1310721, 5, 2, 1310722, 5, 1, 1310723, 5, 1, 1310724, 5, 1, 1310725, 5, 1, 1310726, 5, 1, 1310727, 5, 1, 1310728, 5, 1, 1310729, 5, 1, 1310730, 5, 1, 1310731, 5, 1, 1310732, 5, 1, 1310733, 5, 1, 1310734, 5, 1, 1310735, 5, 1, 1310736, 5, 1, 1310737, 5, 1, 1310738, 5, 1, 1310739, 5, 1, 1310740, 5, 1, 1310741, 5, 1, 1310742, 5, 1, 1310743, 5, 1, 1310744, 5, 1, 1310745, 5, 131072, 1310746, 5, 131073, 1310747, 5, 131073, 1310748, 3, 0, 1310749, 5, 131073, 1310750, 5, 131073, 1310751, 5, 131073, 1310752, 5, 131073, 1310753, 5, 131073, 1310754, 5, 131073, 1310755, 5, 131073, 1310756, 5, 131073, 1310757, 5, 131073, 1310758, 5, 131073, 1310759, 5, 131073, 1376256, 5, 131076, 1376257, 5, 65537, 1376258, 5, 65537, 1376259, 5, 65537, 1376260, 5, 65537, 1376261, 5, 65537, 1376262, 5, 65537, 1376263, 5, 65537, 1376264, 5, 65537, 1376265, 5, 65537, 1376266, 5, 65537, 1376267, 5, 65537, 1376268, 5, 65537, 1376269, 5, 65537, 1376270, 5, 65537, 1376271, 5, 65537, 1376272, 5, 65537, 1376273, 5, 65537, 1376274, 5, 65537, 1376275, 5, 65537, 1376276, 5, 65537, 1376277, 5, 65537, 1376278, 5, 65537, 1376279, 5, 65537, 1376280, 5, 65537, 1376281, 5, 131077, 1376282, 5, 131073, 1376283, 5, 131073, 1376284, 5, 131073, 1376285, 5, 131073, 1376286, 5, 131073, 1376287, 5, 131073, 1376288, 5, 131073, 1376289, 5, 131073, 1376290, 5, 131073, 1376291, 5, 131073, 1376292, 5, 131073, 1376293, 5, 131073, 1376294, 5, 131073, 1376295, 5, 131073, 1441792, 5, 131073, 1441793, 5, 131073, 1441794, 5, 131073, 1441795, 5, 131073, 1441796, 5, 131073, 1441797, 5, 131073, 1441798, 5, 131073, 1441799, 5, 131073, 1441800, 5, 131073, 1441801, 5, 131073, 1441802, 5, 131073, 1441803, 5, 131073, 1441804, 5, 131073, 1441805, 5, 131073, 1441806, 5, 131073, 1441807, 5, 131073, 1441808, 5, 131073, 1441809, 5, 131073, 1441810, 5, 131073, 1441811, 5, 131073, 1441812, 5, 131073, 1441813, 5, 131073, 1441814, 5, 131073, 1441815, 5, 131073, 1441816, 5, 131073, 1441817, 5, 131073, 1441818, 5, 131073, 1441819, 5, 131073, 1441820, 5, 131073, 1441821, 5, 131073, 1441822, 5, 131073, 1441823, 5, 131073, 1441824, 5, 131073, 1441825, 5, 131073, 1441826, 5, 131073, 1441827, 5, 131073, 1441828, 5, 131073, 1441829, 5, 131073, 1441830, 5, 131073, 1441831, 5, 131073 )

[node name="Character" parent="UpperWorld" instance=ExtResource( 2 )]
position = Vector2( 133, -134 )
collision_layer = 3
texture = ExtResource( 4 )
active = true

[node name="LowerWorld" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 48, 48 )
cell_custom_transform = Transform2D( 48, 0, 0, 48, 0, 0 )
format = 1

[node name="Character" parent="LowerWorld" instance=ExtResource( 2 )]
position = Vector2( 144, 973 )
collision_layer = 3
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, -540 )
current = true

[node name="Tween" type="Tween" parent="."]

[node name="ExitBlock" type="StaticBody2D" parent="."]
position = Vector2( 1910, 0 )
scale = Vector2( 0.8, -0.8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitBlock"]
shape = SubResource( 32 )

[node name="FinishArea" type="Area2D" parent="."]
position = Vector2( 1820, 0 )
scale = Vector2( 0.8, -0.8 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishArea"]
shape = SubResource( 33 )

[node name="Untitled" type="Sprite" parent="."]
modulate = Color( 0.360784, 0.678431, 0.584314, 0.501961 )
position = Vector2( 960, -658 )
scale = Vector2( 0.8, 0.8 )
z_index = -1
texture = ExtResource( 6 )

[node name="Untitled2" type="Sprite" parent="."]
modulate = Color( 1, 0.411765, 0.411765, 0.501961 )
position = Vector2( 955, 665 )
scale = Vector2( 0.8, -0.8 )
z_index = -1
texture = ExtResource( 6 )

[node name="Dialog" parent="." instance=ExtResource( 8 )]
margin_left = 51.0
margin_top = 417.0
margin_right = 51.0
margin_bottom = 417.0
timeline = "timeline-1658079749.json"

[node name="BoxArea" parent="." instance=ExtResource( 9 )]
position = Vector2( 1704, 245 )

[node name="TransformTutorialArea" type="Area2D" parent="."]
position = Vector2( 1658, -362 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransformTutorialArea"]
visible = false
shape = SubResource( 34 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 1350.0
margin_top = -450.0
margin_right = 1576.0
margin_bottom = -327.0
theme = ExtResource( 10 )
text = "press \"1\" to
change the
character."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 1400.0
margin_top = 150.0
margin_right = 1626.0
margin_bottom = 273.0
theme = ExtResource( 10 )
text = "press \"2\" 
to turn into
a block."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="FinishArea" to="." method="_on_FinishArea_body_entered"]
[connection signal="dialogic_signal" from="Dialog" to="." method="_on_Dialog_dialogic_signal"]
[connection signal="body_entered" from="TransformTutorialArea" to="." method="_on_TransformTutorialArea_body_entered" flags=6]
